--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   </head>
   <body>
     <h1 class="main-hello">HELLO WORLD!</h1>
+    <main>
+      <ul>
+        <li><a href="/">01</a></li>
+        <li><a href="/">02</a></li>
+        <li><a href="/">03</a></li>
+        <li><a href="/">04</a></li>
+        <li><a href="/">05</a></li>
+        <li><a href="/">06</a></li>
+        <li><a href="/">07</a></li>
+        <li><a href="/">08</a></li>
+      </ul>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
